# hqcb-hllhc-hhh

./: .gitattributes  .gitignore  CITATION.cff  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  paper.yml
data/cosmology/: hqcb_b_toy.yaml  hqcb_infer_data_mock.yaml  hqcb_infer_toy.yaml
data/likelihoods/bao_mock/: bao.csv  cov.txt
data/projections/: hl_lhc_baseline.yaml
docs/: HQCB_B_calibration.md  HQCB_Formalism.md
paper/: README.md  main.tex  paper.tex  refs.bib
paper/bib/: references.bib
paper/sections/: 01_introduction.tex  01_motivation.tex  02_action_eoms.tex  02_action_field_equations.tex  03_lqg_bridge.tex  04_bootstrap_exponent.tex  04_bootstrap_lambda.tex  05_cosmology_predictions.tex  05_inference.tex  06_inference_pipeline.tex  06_results.tex  07_discussion.tex  07_discussion_roadmap.tex
scripts/: hqcb_b_demo.py  hqcb_infer.py  hqcb_infer_data.py  make_figures.py  make_paper_figures.py
src/hqcb_hhh/: __init__.py  cli.py  io.py  likelihood.py  theory.py
src/hqcb_hhh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hqcb_hhh/inference/: __init__.py  likelihoods.py  models.py
tests/: conftest.py  test_asimov_interval.py  test_cli_imports.py  test_hqcb_b_calibration.py  test_hqcb_infer_pipeline.py  test_likelihoods_cov.py  test_quadratic_fit.py
